--- a/app.json
+++ b/app.json
@@ -1,16 +1,19 @@
 {
-    "pages": [
-        "pages/book_setting/book_setting",
-        "pages/index/index",    
-        "pages/my/my",
-        "pages/account/account",
-        "pages/books/books",
-        "pages/statistics/statistics"    
-    ],
-    "window": {
-        "backgroundTextStyle": "light",
-        "navigationBarBackgroundColor": "#fff",
-        "navigationBarTitleText": "WeChat",
-        "navigationBarTextStyle": "black"
-    }
+  "pages": [
+      "pages/periodic_account/periodic_account",
+    "pages/book_setting/book_setting",
+    "pages/edit_name/edit_name",
+    "pages/member_management/member_management",
+    "pages/index/index",
+    "pages/my/my",
+    "pages/account/account",
+    "pages/books/books",
+    "pages/statistics/statistics"
+  ],
+  "window": {
+    "backgroundTextStyle": "light",
+    "navigationBarBackgroundColor": "#F1F5F6",
+    "navigationBarTitleText": "WeChat",
+    "navigationBarTextStyle": "black"
+  }
 }
